--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-	font-family:  sans-serif;
-	font-size: 14px;
-	overflow: hidden;
-	min-width: 500px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  overflow: hidden;
+  min-width: 500px;
 }
